--- a/apps/templates/includes/sidebar-inner.html
+++ b/apps/templates/includes/sidebar-inner.html
@@ -67,9 +67,15 @@
                 <div class="collapse" id="navbar-facturation">
                     <ul class="nav nav-sm flex-column">
                         <li class="nav-item">
+                            <a href="{% url 'paiement:declarations' %}" class="nav-link">
+                            <span class="sidenav-mini-icon"> D </span>
+                            <span class="sidenav-normal"> Déclarations </span>
+                            </a>
+                        </li>
+                        <li class="nav-item">
                             <a href="{% url 'paiement:factures' %}" class="nav-link">
-                            <span class="sidenav-mini-icon"> L </span>
-                            <span class="sidenav-normal"> Liste </span>
+                            <span class="sidenav-mini-icon"> F </span>
+                            <span class="sidenav-normal"> Factures </span>
                             </a>
                         </li>
                         <li class="nav-item">
