--- a/apps/templates/includes/sidebar-inner.html
+++ b/apps/templates/includes/sidebar-inner.html
@@ -4,7 +4,7 @@
         <!-- Brand -->
         <div class="sidenav-header  d-flex  align-items-center">
             <a class="navbar-brand" href="/">
-            <img src="/static/assets/img/brand/blue.png" class="navbar-brand-img" alt="...">
+            <img src="/static/assets/img/brand/logo.jpg" style="width: 500px;height: 1000px;;" class="navbar-brand-img" alt="Logo">
             </a>
             <div class=" ml-auto ">
             <!-- Sidenav toggler -->
