--- a/apps/templates/layouts/base.html
+++ b/apps/templates/layouts/base.html
@@ -22,7 +22,7 @@
   </title>
 
   <!-- Favicon -->
-  <link rel="icon" href="/static/assets/img/brand/favicon.png" type="image/png">
+  <link rel="icon" href="/static/assets/img/brand/logo.jpg" type="image/jpg">
   <!-- Fonts -->
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans:300,400,600,700">
   <!-- Icons -->
