--- a/apps/templates/includes/navigation-fullscreen.html
+++ b/apps/templates/includes/navigation-fullscreen.html
@@ -26,7 +26,7 @@
         </div>
         <ul class="navbar-nav mr-auto">
 
-          {% if request.user.is_authenticated %}
+          {% if request.user.is_authenticated and not request.user.reset_pwd %}
           
             <li class="nav-item">
               <a href="/" class="nav-link">
