--- a/apps/templates/paiements/declarations.html
+++ b/apps/templates/paiements/declarations.html
@@ -116,7 +116,7 @@
                 </div>
               </div>
               <!-- Light table -->
-              <div class="table-responsive" data-toggle="list" data-list-values='["n°", "ref", "title",  "total_employee", "actions"]'>
+              <div class="table-responsive" data-toggle="list" data-list-values='["n°", "ref", "title",  "total_employee", "status", "actions"]'>
                 <table class="table align-items-center table-flush">
                   <thead class="thead-light">
                     <tr>
@@ -124,6 +124,7 @@
                       <th scope="col" class="sort" data-sort="ref">Référence</th>
                       <th scope="col" class="sort" data-sort="title">Titre</th>
                       <th scope="col" class="sort" data-sort="total_employee">Total Employées</th>
+                      <th scope="col" class="sort" data-sort="status">Statut</th>
                       <th scope="col" class="sort" data-sort="Actions">Actions</th>
                     </tr>
                   </thead>
@@ -137,10 +138,13 @@
                           {{declaration.reference}}
                         </th>
                         <td class="title">
-                            {{declaration.title}}
+                          {{declaration.title}}
                         </td>
-                        <td class="total_employe">
-                            {{declaration.total_employee}}
+                        <td class="total_employe text-center">
+                          {{declaration.employee_declarations.count}}
+                        </td>
+                        <td class="status">
+                            {{declaration.get_status_display}}
                         </td>
                         <td class="text-center justify-content-center">
                           <span>
@@ -172,7 +176,7 @@
                                         </div>
                                         <div class="col">
                                           <i class="ni education_hat mr-2"></i><span class="text-muted">Total Employées:</span>
-                                          <strong>{{declaration.total_employee}} </strong>
+                                          <strong>{{declaration.employee_declarations.count}} </strong>
                                         </div>
                                       </div>
                                       <div class="row">
@@ -200,13 +204,94 @@
                             </div>
                           </div>
 
-                          <span>
-                            <button data-href="{% url 'paiement:edit_declaration' declaration.id %}" class="edit-link btn btn-sm btn-icon-only" role="button">Edit</button>
-                          </span>
+                          {% if declaration.status == 'unvalidated' %}
+                            <span>
+                              <button data-href="{% url 'paiement:edit_declaration' declaration.id %}" class="edit-link btn btn-sm btn-icon-only" role="button">Edit</button>
+                            </span>
+                          {% endif %}
 
                           <span>
                             <!-- <button data-href="{% url 'paiement:payment_receipt' declaration.id %}" onclick="window.open($(this).data('href'), '_blank')" class="btn btn-sm btn-icon-only" role="button">Print</button> -->
                           </span>
+
+                          {% if declaration.status == 'unvalidated' and declaration.employee_declarations.count > 0 %}
+                            <span>
+                              <button class="btn btn-sm btn-icon-only" role="button" data-toggle="modal" data-target="#modal-declaration-validation-{{declaration.id}}">Val</button>
+                            </span>
+                          {% endif %}
+                            
+                          <div class="modal fade" id="modal-declaration-validation-{{declaration.id}}" tabindex="-1" role="dialog" aria-labelledby="modal-declaration-validation-{{declaration.id}}" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="dialog">
+                              <div class="modal-content">
+                                <div class="modal-header justify-content-center">
+                                  <h2>Confirmation </h2>
+                                </div>
+                                
+                                <div class="modal-body">
+    
+                                  <div class="card card-agency mt--4 mb--4">
+                                    
+                                    <div class="card-body">
+                                      <div class="row">
+                                        <div class="col">
+                                          <p class="text-muted">Attention !!! <br><span class="font-italic">Une fois validée, aucune modification n'est possible.</span></p>
+                                        </div>
+                                      </div>
+                                      <div class="row">
+                                        <div class="col">
+                                          <i class="ni education_hat mr-2"></i><span class="text-muted"></span> 
+                                          <strong>Etes-vous sûr de vouloir valider la déclaration ?</strong>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+  
+                                </div>
+                                <div class="modal-footer justify-content-center">
+                                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Non</button>
+                                  <button data-href="{% url 'paiement:validate_declaration' declaration.id %}" href="#" class="edit-link btn btn-primary" role="button">Oui</button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          
+                          {% if declaration.status == 'validated' %}
+                            <span>
+                              <button class="btn btn-sm btn-icon-only" role="button" data-toggle="modal" data-target="#modal-declaration-bill-{{declaration.id}}">Fct</button>
+                            </span>
+                          {% endif %}
+                            
+                          <div class="modal fade" id="modal-declaration-bill-{{declaration.id}}" tabindex="-1" role="dialog" aria-labelledby="modal-declaration-bill-{{declaration.id}}" aria-hidden="true">
+                            <div class="modal-dialog modal-dialog-centered" role="dialog">
+                              <div class="modal-content">
+                                <div class="modal-header justify-content-center">
+                                  <h2>Confirmation </h2>
+                                </div>
+                                
+                                <div class="modal-body">
+    
+                                  <div class="card card-agency mt--4 mb--4">
+                                    
+                                    <div class="card-body">
+                                      <div class="row">
+                                        <div class="col">
+                                          <i class="ni education_hat mr-2"></i><span class="text-muted"></span> 
+                                          <strong>Etes-vous sûr de vouloir facturer la déclaration ?</strong>
+                                        </div>
+                                      </div>
+                                    </div>
+                                  </div>
+  
+                                </div>
+                                <div class="modal-footer justify-content-center">
+                                  <button type="button" class="btn btn-secondary" data-dismiss="modal">Non</button>
+                                  <!-- <button data-href="{% url 'paiement:validate_declaration' declaration.id %}" href="#" class="edit-link btn btn-primary" role="button">Oui</button> -->
+                                  <button  onclick="alert('En cours de dev...')" class="btn btn-primary" role="button">Oui</button>
+                                </div>
+                              </div>
+                            </div>
+                          </div>
+                          
                           
                         </td>
                       </tr>
